[package]
name = "laughing-rotary-particle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
bevy_rapier2d = { version = "0.24.0", features = [
    "simd-stable",
    "debug-render-2d",
    "parallel",
] }
image = "0.24.7"

[profile.release]
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
